@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -23,24 +23,23 @@
 
 /*
  * @test
+ * @enablePreview
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
  * @run testng/othervm --enable-native-access=ALL-UNNAMED SafeFunctionAccessTest
  */
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.NativeSymbol;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.Addressable;
+import java.lang.foreign.Linker;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 
-import jdk.incubator.foreign.VaList;
+import java.lang.foreign.VaList;
 import org.testng.annotations.*;
 
 import static org.testng.Assert.*;
@@ -54,17 +53,15 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
             C_INT, C_INT
     );
 
-    static final SymbolLookup LOOKUP = SymbolLookup.loaderLookup();
-
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedStruct() throws Throwable {
         MemorySegment segment;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            segment = MemorySegment.allocateNative(POINT, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            segment = MemorySegment.allocateNative(POINT, session);
         }
-        assertFalse(segment.scope().isAlive());
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("struct_func").get(),
+        assertFalse(segment.session().isAlive());
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("struct_func"),
                 FunctionDescriptor.ofVoid(POINT));
 
         handle.invokeExact(segment);
@@ -72,25 +69,25 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
 
     @Test
     public void testClosedStructAddr_6() throws Throwable {
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func_6").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_6"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER));
         for (int i = 0 ; i < 6 ; i++) {
             MemorySegment[] segments = new MemorySegment[]{
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope()),
-                    MemorySegment.allocateNative(POINT, ResourceScope.newImplicitScope())
+                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
+                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
+                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
+                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
+                    MemorySegment.allocateNative(POINT, MemorySession.openShared()),
+                    MemorySegment.allocateNative(POINT, MemorySession.openShared())
             };
             // check liveness
-            segments[i].scope().close();
+            segments[i].session().close();
             for (int j = 0 ; j < 6 ; j++) {
                 if (i == j) {
-                    assertFalse(segments[j].scope().isAlive());
+                    assertFalse(segments[j].session().isAlive());
                 } else {
-                    assertTrue(segments[j].scope().isAlive());
+                    assertTrue(segments[j].session().isAlive());
                 }
             }
             try {
@@ -101,7 +98,7 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
             }
             for (int j = 0 ; j < 6 ; j++) {
                 if (i != j) {
-                    segments[j].scope().close(); // should succeed!
+                    segments[j].session().close(); // should succeed!
                 }
             }
         }
@@ -110,12 +107,12 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedVaList() throws Throwable {
         VaList list;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            list = VaList.make(b -> b.addVarg(C_INT, 42), scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            list = VaList.make(b -> b.addVarg(C_INT, 42), session);
         }
-        assertFalse(list.scope().isAlive());
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func").get(),
+        assertFalse(list.session().isAlive());
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func"),
                 FunctionDescriptor.ofVoid(C_POINTER));
 
         handle.invokeExact((Addressable)list);
@@ -123,14 +120,14 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedUpcall() throws Throwable {
-        NativeSymbol upcall;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        MemorySegment upcall;
+        try (MemorySession session = MemorySession.openConfined()) {
             MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
-            upcall = CLinker.systemCLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), scope);
+            upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), session);
         }
-        assertFalse(upcall.scope().isAlive());
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func").get(),
+        assertFalse(upcall.session().isAlive());
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func"),
                 FunctionDescriptor.ofVoid(C_POINTER));
 
         handle.invokeExact((Addressable)upcall);
@@ -140,58 +137,58 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
 
     @Test
     public void testClosedVaListCallback() throws Throwable {
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func_cb").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            VaList list = VaList.make(b -> b.addVarg(C_INT, 42), scope);
-            handle.invoke(list, scopeChecker(scope));
+        try (MemorySession session = MemorySession.openConfined()) {
+            VaList list = VaList.make(b -> b.addVarg(C_INT, 42), session);
+            handle.invoke(list, sessionChecker(session));
         }
     }
 
     @Test
     public void testClosedStructCallback() throws Throwable {
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func_cb").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(POINT, scope);
-            handle.invoke(segment, scopeChecker(scope));
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(POINT, session);
+            handle.invoke(segment, sessionChecker(session));
         }
     }
 
     @Test
     public void testClosedUpcallCallback() throws Throwable {
-        MethodHandle handle = CLinker.systemCLinker().downcallHandle(
-                LOOKUP.lookup("addr_func_cb").get(),
+        MethodHandle handle = Linker.nativeLinker().downcallHandle(
+                findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
-            NativeSymbol upcall = CLinker.systemCLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), scope);
-            handle.invoke(upcall, scopeChecker(scope));
+            MemorySegment upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), session);
+            handle.invoke(upcall, sessionChecker(session));
         }
     }
 
-    NativeSymbol scopeChecker(ResourceScope scope) {
+    MemorySegment sessionChecker(MemorySession session) {
         try {
-            MethodHandle handle = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "checkScope",
-                    MethodType.methodType(void.class, ResourceScope.class));
-            handle = handle.bindTo(scope);
-            return CLinker.systemCLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), ResourceScope.newImplicitScope());
+            MethodHandle handle = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "checkSession",
+                    MethodType.methodType(void.class, MemorySession.class));
+            handle = handle.bindTo(session);
+            return Linker.nativeLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), MemorySession.openImplicit());
         } catch (Throwable ex) {
             throw new AssertionError(ex);
         }
     }
 
-    static void checkScope(ResourceScope scope) {
+    static void checkSession(MemorySession session) {
         try {
-            scope.close();
-            fail("Scope closed unexpectedly!");
+            session.close();
+            fail("Session closed unexpectedly!");
         } catch (IllegalStateException ex) {
-            assertTrue(ex.getMessage().contains("kept alive")); //if acquired, fine
+            assertTrue(ex.getMessage().contains("acquired")); //if acquired, fine
         }
     }
 }
