@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,9 +21,8 @@
  * questions.
  */
 
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.util.Collection;
@@ -46,7 +45,7 @@ public class AbstractVectorLoadStoreTest extends AbstractVectorTest {
                         .order(ByteOrder.nativeOrder());
             }),
             withToString("MS:RW:NE", (int s) -> {
-                return MemorySegment.allocateNative(s, ResourceScope.newImplicitScope())
+                return MemorySegment.allocateNative(s, MemorySession.openImplicit())
                         .asByteBuffer()
                         .order(ByteOrder.nativeOrder());
             })
